[project]
name = "privilage-walk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "pillow>=11.3.0",
    "python-engineio>=4.12.2",
    "python-socketio>=5.13.0",
    "qrcode>=8.2",
]
